<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="horizontal"
        android:background="@color/BeigeCoffee"
        android:layout_margin="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_CompradasHoy" />

                    <Button
                        android:id="@+id/bCompradasHoy"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_DevueltasAyer" />

                    <Button
                        android:id="@+id/bDevueltasAyer"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_DañadasHoy" />

                    <Button
                        android:id="@+id/bDañadasHoy"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_ObsequiadasHoy" />

                    <Button
                        android:id="@+id/bObsequiadasHoy"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_DevueltasHoy" />

                    <Button
                        android:id="@+id/bDevueltasHoy"
                        style="@style/sty_BotonGris" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/VerdeBorde"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_CoffeeHoy" />

                    <Button
                        android:id="@+id/bCoffeeHoy"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/RojoBorde"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_TinterasAyer" />

                    <Button
                        android:id="@+id/bTinterasAyer"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_TinterasHoy" />

                    <Button
                        android:id="@+id/bTinterasHoy"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_TinterasPendiente" />

                    <Button
                        android:id="@+id/bTinterasPendiente"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/AzulBorde"></LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_Vendedor_1_Ayer" />

                    <Button
                        android:id="@+id/bVendedor_1_Ayer"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_Vendedor_1_Hoy" />

                    <Button
                        android:id="@+id/bVendedor_1_Hoy"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_Vendedor_1_Pendiente" />

                    <Button
                        android:id="@+id/bVendedor_1_Pendiente"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/VerdeBorde"></LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_Vendedor_2_Ayer" />

                    <Button
                        android:id="@+id/bVendedor_2_Ayer"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_Vendedor_2_Hoy" />

                    <Button
                        android:id="@+id/bVendedor_2_Hoy"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/sty_TextoItems"
                        android:text="@string/string_Vendedor_2_Pendiente" />

                    <Button
                        android:id="@+id/bVendedor_2_Pendiente"
                        style="@style/sty_BotonGris" />

                </LinearLayout>
            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            >

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tvDisponiblesHoy"
                style="@style/sty_TextoTotales"
                android:text="@string/string_DisponiblesHoy"/>
            <TextView
                android:id="@+id/tvConteo"
                style="@style/sty_TextoTotales"
                android:text="@string/string_Conteo"/>
            <TextView
                android:id="@+id/tvFaltantes"
                style="@style/sty_TextoTotales"
                android:text="@string/string_Faltantes"/>
            <TextView
                android:id="@+id/tvDineroVendedor_1"
                style="@style/sty_TextoTotales"
                android:text="@string/string_DineroVendedor_1"/>
            <TextView
                android:id="@+id/tvDineroVendedor_2"
                style="@style/sty_TextoTotales"
                android:text="@string/string_DineroVendedor_2"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/bBorrar"
                style="@style/sty_BotonAmarillo"
                android:layout_width="50dp"
                android:text="@string/st_Borrar" />

            <Button
                android:id="@+id/bEnviar"
                style="@style/sty_BotonVerde"
                android:layout_width="50dp"
                android:text="@string/st_Enviar" />

        </LinearLayout>

        <GridLayout
            android:id="@+id/glTeclado"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="5"
            android:columnCount="3"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bTecla_7"
                style="@style/sty_BotonTeclado"
                android:text="@string/st_Tecla_7" />

            <Button
                android:id="@+id/bTecla_8"
                style="@style/sty_BotonTeclado"
                android:text="@string/st_Tecla_8" />

            <Button
                android:id="@+id/bTecla_9"
                style="@style/sty_BotonTeclado"
                android:text="@string/st_Tecla_9" />

            <Button
                android:id="@+id/bTecla_4"
                style="@style/sty_BotonTeclado"
                android:text="@string/st_Tecla_4" />

            <Button
                android:id="@+id/bTecla_5"
                style="@style/sty_BotonTeclado"
                android:text="@string/st_Tecla_5" />

            <Button
                android:id="@+id/bTecla_6"
                style="@style/sty_BotonTeclado"
                android:text="@string/st_Tecla_6" />

            <Button
                android:id="@+id/bTecla_1"
                style="@style/sty_BotonTeclado"
                android:text="@string/st_Tecla_1" />

            <Button
                android:id="@+id/bTecla_2"
                style="@style/sty_BotonTeclado"
                android:text="@string/st_Tecla_2" />

            <Button
                android:id="@+id/bTecla_3"
                style="@style/sty_BotonTeclado"
                android:text="@string/st_Tecla_3" />

            <Space></Space>

            <Button
                android:id="@+id/bTecla_0"
                style="@style/sty_BotonTeclado"
                android:text="@string/st_Tecla_0" />


        </GridLayout>

    </LinearLayout>

</LinearLayout>